2026 0318 文本对话，同步回答，设定角色